# DINOV2_Classification

./: .gitignore  README.md  environment.yaml
src/: .gitignore  LICENSE  environment.yml  pyproject.toml
src/HYO/: Hyperparameter_optimization.py
src/data/: data_loading.py
src/main/: main.py
src/main/model_logs/: events.out.tfevents.1729248397.BDR.31596.0
src/models/: classifier.py  train_validation_test.py
src/train/: train.py
src/train/model_logs/: events.out.tfevents.1729169138.BDR.32448.0
src/utils/: Utils.py
